@@ -1,22 +1,19 @@
 package ru.solomka.graphic.scene.template.group;
 
+import ru.solomka.graphic.scene.SceneEntry;
 import ru.solomka.graphic.scene.template.Template;
 
-import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 public class DefaultGroup implements TemplateGroup {
 
     private final List<Template> cache;
 
-    public DefaultGroup() {
-        this.cache = new ArrayList<>();
-    }
-
     public DefaultGroup(Template... templates) {
-        this.cache = Arrays.stream(templates).toList();
+        this.cache = Arrays.stream(templates).collect(Collectors.toList());
     }
 
     @Override
@@ -30,14 +27,14 @@ public class DefaultGroup implements TemplateGroup {
     }
 
     @Override
+    public void loadTemplates(SceneEntry entry) {
+        this.cache.forEach(template -> template.load(entry));
+    }
+
+    @Override
     public Template getTemplateByFilter(Predicate<Template> filter) {
         return this.cache.stream().filter(filter)
                 .findAny()
                 .orElse(null);
-    }
-
-    @Override
-    public List<? extends Template> getTemplates() {
-        return this.cache;
     }
 }
